--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 body {
   height: 100vh;
-  background: linear-gradient(120deg, #ffe53bd8, #ff2525da);
+  background: linear-gradient(120deg, #0400f3d8, #008f18da);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,6 +21,29 @@ body {
   height: 200px;
   width: 550px;
   background: transparent;
-  border-radius: 3px;
+  border-radius: 7px;
   box-shadow: 0px 8px 10px rgba(0, 0, 0, .5);
+}
+
+.relogio div {
+  display: flex;
+  flex-direction: column;
+  height: 170px;
+  width: 150px;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background: rgba(5, 5, 5, .9);
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, .7);
+  border-radius: 7px;
+  letter-spacing: 3px;
+}
+
+.relogio span {
+  font-weight: bolder;
+  font-size: 60px;
+}
+
+.relogio span.tempo {
+  font-size: 10px;
 }
